force-app/main/default/objects/Contact_History__c/Contact_History__c.object-meta.xml
<CustomObject>
    <label>Contact History</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>Contact History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>