force-app/main/default/objects/Contact_History__c/fields/Date_of_update__c.field-meta.xml
<CustomField>
    <fullName>Date_of_update__c</fullName>
    <label>Date of update</label>
    <type>Date</type>
</CustomField>